--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -3,20 +3,20 @@
 - taxonomy: 常用推荐
   icon: fa-star
   links: 
-    - title: 科技共享YouTube
+    - title: 抖音：童萌军分享
       logo: 
-      url: https://www.youtube.com/channel/UCQoagx4VHBw3HkAyzvKEEBA/
-      description: 一个专注于软件安装，网络相关教学的频道！
-    - title: 资源博客
-      qrcode: images/qrcodes/bk.png
-      logo:  images/logos/kjgxa999f-kjgx1fr3l-001.ico
-      url: https://kjgx668.blogspot.com/
-      description: 资源分享，详细图文教程。
-    - title: 论坛交流
+      url: https://v.douyin.com/i6UW3WV5/
+      description: 一个专注于软件安装，系统小技巧相关教学的频道！
+    - title: B站：童萌军分享
       qrcode: 
-      logo: images/logos/images.png  
-      url: https://kjgx.freeflarum.com/
-      description: 问题描述，技术交流。
+      logo:  
+      url: https://space.bilibili.com/390246410?spm_id_from=333.337.0.0
+      description: 资源分享，详细图文教程。
+    - title: 公众号：童萌军分享
+      qrcode: 
+      logo:   
+      url: 
+      description: 发送：往期相关资源。会有惊喜哦
     - title: 环球巴士
       qrcode: 
       logo: images/logos/HQBS.png
