--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -12,10 +12,10 @@
       logo:  
       url: https://space.bilibili.com/390246410?spm_id_from=333.337.0.0
       description: 资源分享，详细图文教程。
-    - title: 公众号：童萌军分享
+    - title: 小红书：童萌军分享
       qrcode: 
       logo:   
-      url: 
+      url: https://www.xiaohongshu.com/user/profile/638409d9000000001f01cf6d?xhsshare=CopyLink&appuid=638409d9000000001f01cf6d&apptime=1719715262&share_id=bcce1fa57c7f414e96e09e14301c2b63
       description: 发送：往期相关资源。会有惊喜哦
     - title: 环球巴士
       qrcode: 
