--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -17,7 +17,10 @@
       logo:   
       url: https://flowus.cn/ed62fb49-4a71-42f3-985c-74343e14dd04#993c7404-e01d-40e7-abad-ef3b921b2a2d
       description: 发送：往期相关资源。会有惊喜哦
-    - title: 环球巴士
+    - title: QQ群
+      logo: 
+      url: 点击链接加入群聊【童萌军福利2群】：http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6TNV295m-TqKGSnbyf81aT7icTrdqqo3&authKey=gg4WE5cSwBswqN2et6p120eTycCmVoSUV%2Fj4VWEwfT5K%2FXKKWA0wZWpkzWUkeVan&noverify=0&group_code=1092886391
+      description: 沟通交流，资源分享
       qrcode: 
       logo: images/logos/HQBS.png
       url: https://universalbus.cn?s=gB8CJKmJdd
