--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -19,7 +19,7 @@
       description: 发送：往期相关资源。会有惊喜哦
     - title: QQ群
       logo: 
-      url: 点击链接加入群聊【童萌军福利2群】：http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6TNV295m-TqKGSnbyf81aT7icTrdqqo3&authKey=gg4WE5cSwBswqN2et6p120eTycCmVoSUV%2Fj4VWEwfT5K%2FXKKWA0wZWpkzWUkeVan&noverify=0&group_code=1092886391
+      url: http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6TNV295m-TqKGSnbyf81aT7icTrdqqo3&authKey=gg4WE5cSwBswqN2et6p120eTycCmVoSUV%2Fj4VWEwfT5K%2FXKKWA0wZWpkzWUkeVan&noverify=0&group_code=1092886391
       description: 沟通交流，资源分享
       qrcode: 
       logo: images/logos/HQBS.png
@@ -37,11 +37,7 @@
       logo:  images/logos/5eac6d69dc12980944f98.jpg
       url: https://app.xintaifree.com?from=5431/
       description: shadowrocket 小火箭 | quantumult x 圈x | 礼品卡/兑换码 | ChatGPT plus 应有尽有！⏰客服在线时间08:00-23:00
-    - title: Telegram
-      logo: 
-      url: https://t.me/kjgxZY/
-      description:小红书：童萌军的分享
-    - title: 
+    - title: 小红书：童萌军的分享
       url: https://www.xiaohongshu.com/user/profile/638409d9000000001f01cf6d?xhsshare=CopyLink&appuid=638409d9000000001f01cf6d&apptime=1719715262&share_id=bcce1fa57c7f414e96e09e14301c2b63
       description: 沟通交流，资源分享
     - title: 接码平台
