--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -39,7 +39,7 @@
       description: shadowrocket 小火箭 | quantumult x 圈x | 礼品卡/兑换码 | ChatGPT plus 应有尽有！⏰客服在线时间08:00-23:00
     - title: 小红书：童萌军的分享
       url: https://www.xiaohongshu.com/user/profile/638409d9000000001f01cf6d?xhsshare=CopyLink&appuid=638409d9000000001f01cf6d&apptime=1719715262&share_id=bcce1fa57c7f414e96e09e14301c2b63
-      description: 沟通交流，资源分享
+      description: 小白勿入，沟通交流，资源分享
     - title: 接码平台
       logo:  
       url: https://sms-activate.org/?ref=4312619/
