--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -21,6 +21,7 @@
       logo: 
       url: http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6TNV295m-TqKGSnbyf81aT7icTrdqqo3&authKey=gg4WE5cSwBswqN2et6p120eTycCmVoSUV%2Fj4VWEwfT5K%2FXKKWA0wZWpkzWUkeVan&noverify=0&group_code=1092886391
       description: 沟通交流，资源分享
+    - title: 环球巴士
       qrcode: 
       logo: images/logos/HQBS.png
       url: https://universalbus.cn?s=gB8CJKmJdd
