--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -15,7 +15,8 @@
     - title: 公众号：童萌军分享
       qrcode: 
       logo:   
-      url: https://flowus.cn/share/ed62fb49-4a71-42f3-985c-74343e14dd04#993c7404-e01d-40e7-abad-ef3b921b2a2d
+      url: https://flowus.cn/share/ed62fb49-4a71-42f3-985c-74343e14dd04?code=U81BVD
+【FlowUs 息流】          扫描二维码获取所有关注
       description: 发送：往期相关资源。会有惊喜哦
     - title: QQ群
       logo: 
